Add Ads screen than Facts screen, new extensions , ImageLoader service

--- a/Animals/Resources/Base.lproj/LaunchScreen.storyboard
+++ b/Animals/Resources/Base.lproj/LaunchScreen.storyboard
@@ -20,20 +20,15 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Animals" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IVl-bL-jit">
                                 <rect key="frame" x="16" y="268.66666666666669" width="343" height="72"/>
                                 <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="60"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="8wf-O3-1gq">
-                                <rect key="frame" x="177.66666666666666" y="396" width="20" height="20"/>
-                            </activityIndicatorView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" systemColor="systemPurpleColor"/>
                         <constraints>
                             <constraint firstItem="IVl-bL-jit" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" multiplier="3/4" id="10W-ms-pBJ"/>
-                            <constraint firstItem="8wf-O3-1gq" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="gCf-l2-87C"/>
                             <constraint firstItem="IVl-bL-jit" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="ngg-Ry-5fY"/>
-                            <constraint firstItem="8wf-O3-1gq" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="vjo-Tq-v5m"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="IVl-bL-jit" secondAttribute="trailing" constant="16" id="zUO-i4-s4V"/>
                         </constraints>
                     </view>
@@ -44,8 +39,8 @@
         </scene>
     </scenes>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        <systemColor name="systemPurpleColor">
+            <color red="0.68627450980392157" green="0.32156862745098042" blue="0.87058823529411766" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
